--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Привет</h1>
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <meta charset="utf-8">
+      <title>Заголовок страницы</title>
+   </head>
+   <body>
+      <h1>Голота Евгений</h1>
+        <h2>UI/UX дизайнер</h2>
+        <p>Абзац 1</p>
+        <p>Абзац 2</p>
+        <p>Абзац 2</p>
+   </body>
+</html>
