--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
       <title>Заголовок страницы</title>
    </head>
    <body>
-      <h1>Голота Евгений</h1>
-        <h2>UI/UX дизайнер</h2>
-        <p>Абзац 1</p>
-        <p>Абзац 2</p>
-        <p>Абзац 2</p>
+        <img src="images/ava.png" width="250">
+            <h1>Голота Евгений</h1>
+                <h2>UI/UX дизайнер</h2>
+                    <a href="https://www.facebook.com/eugene.golota" targ="blank">Я на facebook</a>
+                    <p>Абзац 1</p>
+                    <p>Абзац 2</p>
+                    <p>Абзац 2</p>
+            <ul>
+                <li>Один</li>
+                <li>Два</li>
+                <li>Три</li>
+            </ul>
+            <ol>
+                <li>Четыре</li>
+                <li>Пять</li>
+                <li>Шесть</li>
+            </ol>
    </body>
 </html>
