--- a/index.html
+++ b/index.html
@@ -23,5 +23,33 @@
                 <li>Пять</li>
                 <li>Шесть</li>
             </ol>
+            <table border="1">
+                <tr>
+                    <td>Один</td>
+                    <td>Два</td>
+                    <td>Три</td>
+                </tr>
+                <tr>
+                    <td>Четыре</td>
+                    <td>Пять</td>
+                    <td>Шесть</td>
+                </tr>
+            </table>
+            
+            <br>
+       
+            <label>Логин</label>
+            <input type="text">
+            <br>
+            <label>Пароль</label>
+            <input type="password"> 
+            <br>
+            <lavel>О себе</lavel>
+            <input type="text">
+            <br>
+            <input type="checkbox">
+            <label>Согласен с Пользовательским соглашением</label>
+            <br>
+            <button>Войти</button>
    </body>
 </html>
