--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
                         <img src="Images/herschel-logo.svg">
                     </a>
                 </div>
-                <div class="col-12 justify-center"></div>
+                <div class="col-12 justify-center header-logo-col">
+                    <nav>
+                        <a href="#">Рюкзаки</a>
+                        <a href="#">Аксессуары</a>
+                        <a href="#">Сумки</a>
+                        <a href="#">Шапки</a>
+                        <a href="#">Перчатки</a>
+                    </nav>
+                </div>
             </div>
         </header>
         
