--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class="container">
                 <div class="col-12 col-xs-12 col-sm-6 justify-center">
-                    <a href="/">
+                    <a href="index.html">
                         <img src="Images/herschel-logo.svg">
                     </a>
                 </div>
@@ -39,9 +39,14 @@
                     </div>  
                     <div class="row justify-center">
                         <div class="col-5">
-                            <button class="main-item-btn main-item-btn-dark">
+<!--
+                            <button class="main-item-btn-dark">
                                 Подробнее
                             </button>
+-->
+                            <a href="item.html" class="main-item-btn-dark">
+                                Подробнее
+                            </a>
                         </div>
                         <div class="col-5">
                             <button class="main-item-btn">
