--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
         <link rel="stylesheet" href="Styles/style.css">
         <link rel="stylesheet" href="Styles/normalize.css">
+        <link rel="shortcut icon" href="fav.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Herschel - online shop</title>
     </head>
