--- a/item.html
+++ b/item.html
@@ -5,6 +5,7 @@
       <meta charset="utf-8">
         <link rel="stylesheet" href="Styles/style.css">
         <link rel="stylesheet" href="Styles/normalize.css">
+        <link rel="shortcut icon" href="fav.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Herschel supply</title>
     </head>
