item.html adaptive - бок

--- a/item.html
+++ b/item.html
@@ -33,7 +33,7 @@
 
             <main>
                 <div class="container">
-                    <section class="product-bg col-xs-12">
+                    <section class="product-bg col-xs-12 col-sm-12">
                         <div class="row">
                             <div class="col-5 col-sm-12 col-xs-12  justify-center">
                                 <img src="Images/header-img/header-img@3x.png" class="prod">
