Popular items в адаптиве и соц кнопки как растянуть

--- a/item.html
+++ b/item.html
@@ -63,7 +63,7 @@
                 </div>
                 
 
-                    <div class="row col-xs-12 col-sm-12 item-cards">
+                    <div class="row col-5 col-xs-12 col-sm-12 item-cards">
                         <div class="col-12">
                             <div class="card">
                                 <img class="item-img" src="Images/card-item/4.png">
